--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "script-ext-html-webpack-plugin": "^2.1.2",
         "style-loader": "^0.23.1",
         "ts-loader": "^5.3.0",
+        "tslint": "^5.11.0",
         "typescript": "^3.1.6",
         "webpack": "^4.25.1",
         "webpack-cli": "^3.1.2",
