--- a/package.json
+++ b/package.json
@@ -19,20 +19,15 @@
         "url": "https://github.com/budarin/layout-designers-ui-kit/issues"
     },
     "homepage": "https://github.com/budarin/layout-designers-ui-kit#readme",
-    "lint-staged": {
-        "*.{js,jsx,ts,tsx,json,css,md}": [
-            "prettier --write",
-            "git add"
-        ]
-    },
     "browserslist": "last 2 iOS versions, last 2 Chrome versions",
     "devDependencies": {
         "@budarin/ts-css-loader": "^1.1.12",
         "@types/cssnano": "^4.0.0",
         "@types/html-webpack-plugin": "^3.2.0",
+        "@types/koa-session": "^5.7.4",
         "@types/node": "^10.12.5",
         "@types/prettier": "^1.13.2",
-        "@types/react": "^16.7.2",
+        "@types/react": "^16.7.3",
         "@types/react-dom": "^16.0.9",
         "@types/webpack": "^4.4.18",
         "@types/webpack-dev-server": "^3.1.1",
@@ -42,13 +37,16 @@
         "css-loader": "^1.0.1",
         "cssnano": "^4.1.7",
         "html-webpack-plugin": "^3.2.0",
+        "husky": "^1.1.3",
+        "koa-session": "^5.10.0",
         "postcss-loader": "^3.0.0",
         "postcss-mixins": "^6.2.0",
         "postcss-preset-env": "^6.4.0",
         "prettier": "^1.15.2",
+        "pretty-quick": "^1.8.0",
         "prun": "^1.0.1",
         "rimraf": "^2.6.2",
-        "script-ext-html-webpack-plugin": "^2.1.2",
+        "script-ext-html-webpack-plugin": "^2.1.3",
         "style-loader": "^0.23.1",
         "ts-loader": "^5.3.0",
         "tslint": "^5.11.0",
