--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "scripts": {
         "start": "prun start",
         "build": "prun build",
-        "upgrade": "prun upgrade",
-        "test": "echo \"Error: no test specified\" && exit 0"
+        "test": "echo \"Error: no test specified\" && exit 0",
+        "upgrade": "prun upgrade"
     },
     "repository": {
         "type": "git",
@@ -22,6 +22,7 @@
     "browserslist": "last 2 iOS versions, last 2 Chrome versions",
     "devDependencies": {
         "@budarin/ts-css-loader": "^1.1.12",
+        "@types/classnames": "^2.2.6",
         "@types/cssnano": "^4.0.0",
         "@types/html-webpack-plugin": "^3.2.0",
         "@types/koa-session": "^5.7.4",
@@ -33,6 +34,7 @@
         "@types/webpack-dev-server": "^3.1.1",
         "@types/webpack-env": "^1.13.6",
         "check-dependencies": "^1.1.0",
+        "classnames": "^2.2.6",
         "copy-webpack-plugin": "^4.6.0",
         "css-loader": "^1.0.1",
         "cssnano": "^4.1.7",
