--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@types/prettier": "^1.13.2",
         "@types/react": "^16.7.3",
         "@types/react-dom": "^16.0.9",
+        "@types/react-hot-loader": "^4.1.0",
         "@types/webpack": "^4.4.18",
         "@types/webpack-dev-server": "^3.1.1",
         "@types/webpack-env": "^1.13.6",
@@ -48,6 +49,7 @@
         "pretty-quick": "^1.8.0",
         "prism-react-renderer": "^0.1.4",
         "prun": "^1.0.1",
+        "react-hot-loader": "^4.3.12",
         "rimraf": "^2.6.2",
         "script-ext-html-webpack-plugin": "^2.1.3",
         "style-loader": "^0.23.1",
