--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "prettier": "^1.15.2",
         "pretty-quick": "^1.8.0",
         "prun": "^1.0.1",
+        "raw-loader": "^0.5.1",
         "react-hot-loader": "^4.3.12",
         "react-syntax-highlighter": "^10.1.1",
         "rimraf": "^2.6.2",
