--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "prun start",
         "build": "prun build",
         "test": "echo \"Error: no test specified\" && exit 0",
-        "upgrade": "prun upgrade"
+        "upgrade": "prun upgrade",
+        "clean": "prun clean"
     },
     "repository": {
         "type": "git",
@@ -21,12 +22,27 @@
     "homepage": "https://github.com/budarin/layout-designers-ui-kit#readme",
     "browserslist": "last 2 iOS versions, last 2 Chrome versions",
     "devDependencies": {
+        "@babel/cli": "^7.1.5",
+        "@babel/core": "^7.1.6",
+        "@babel/node": "^7.0.0",
+        "@babel/plugin-proposal-class-properties": "^7.1.0",
+        "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+        "@babel/plugin-transform-react-constant-elements": "^7.0.0",
+        "@babel/plugin-transform-react-inline-elements": "^7.0.0",
+        "@babel/plugin-transform-react-jsx-self": "^7.0.0",
+        "@babel/plugin-transform-react-jsx-source": "^7.0.0",
+        "@babel/plugin-transform-runtime": "^7.1.0",
+        "@babel/preset-env": "^7.1.6",
+        "@babel/preset-react": "^7.0.0",
+        "@babel/preset-typescript": "^7.1.0",
+        "@babel/register": "^7.0.0",
         "@babel/runtime": "^7.1.5",
         "@budarin/ts-css-loader": "^1.1.12",
         "@types/classnames": "^2.2.6",
         "@types/cssnano": "^4.0.0",
+        "@types/debug": "0.0.31",
+        "@types/dotenv": "^6.1.0",
         "@types/html-webpack-plugin": "^3.2.0",
-        "@types/koa-session": "^5.7.4",
         "@types/node": "^10.12.11",
         "@types/prettier": "^1.15.2",
         "@types/react": "^16.7.11",
@@ -36,14 +52,27 @@
         "@types/webpack": "^4.4.20",
         "@types/webpack-dev-server": "^3.1.1",
         "@types/webpack-env": "^1.13.6",
+        "@types/webpack-manifest-plugin": "^1.3.2",
+        "babel-core": "^7.0.0-bridge.0",
+        "babel-jest": "^23.6.0",
+        "babel-loader": "^8.0.4",
+        "babel-plugin-closure-elimination": "^1.3.0",
+        "babel-plugin-lodash": "^3.3.4",
+        "babel-plugin-preval": "^3.0.1",
+        "babel-plugin-transform-react-class-to-function": "^1.2.0",
         "check-dependencies": "^1.1.0",
         "classnames": "^2.2.6",
+        "compression-webpack-plugin": "^2.0.0",
         "copy-webpack-plugin": "^4.6.0",
         "css-loader": "^1.0.1",
         "cssnano": "^4.1.7",
+        "dotenv": "^6.1.0",
+        "file-loader": "^2.0.0",
         "html-webpack-plugin": "^3.2.0",
         "husky": "^1.2.0",
-        "koa-session": "^5.10.0",
+        "identity-obj-proxy": "^3.0.0",
+        "optimize-js-plugin": "0.0.4",
+        "postcss": "^7.0.6",
         "postcss-loader": "^3.0.0",
         "postcss-mixins": "^6.2.0",
         "postcss-preset-env": "^6.4.0",
@@ -51,16 +80,30 @@
         "pretty-quick": "^1.8.0",
         "prun": "^1.0.1",
         "raw-loader": "^0.5.1",
-        "react-hot-loader": "^4.3.12",
+        "react": "^16.7.0-alpha.2",
+        "react-dom": "^16.7.0-alpha.2",
+        "react-hot-loader": "^4.5.1",
         "react-syntax-highlighter": "^10.1.1",
         "rimraf": "^2.6.2",
         "script-ext-html-webpack-plugin": "^2.1.3",
         "style-loader": "^0.23.1",
+        "stylelint": "^9.9.0",
+        "stylelint-a11y": "^1.1.9",
+        "stylelint-config-css-modules": "^1.3.0",
+        "stylelint-config-prettier": "^4.0.0",
+        "stylelint-config-recommended": "^2.1.0",
+        "stylelint-no-unsupported-browser-features": "^3.0.2",
+        "stylelint-order": "^2.0.0",
+        "terser-webpack-plugin": "^1.1.0",
         "ts-loader": "^5.3.1",
         "tslint": "^5.11.0",
+        "tslint-config-prettier": "^1.17.0",
+        "tslint-react": "^3.6.0",
         "typescript": "^3.2.1",
         "webpack": "^4.26.1",
         "webpack-cli": "^3.1.2",
-        "webpack-dev-server": "^3.1.10"
+        "webpack-dev-server": "^3.1.10",
+        "webpack-manifest-plugin": "^2.0.4",
+        "write-file-webpack-plugin": "^4.5.0"
     }
 }
