--- a/package.json
+++ b/package.json
@@ -103,7 +103,6 @@
         "webpack": "^4.26.1",
         "webpack-cli": "^3.1.2",
         "webpack-dev-server": "^3.1.10",
-        "webpack-manifest-plugin": "^2.0.4",
-        "write-file-webpack-plugin": "^4.5.0"
+        "webpack-manifest-plugin": "^2.0.4"
     }
 }
