--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "prun build",
         "test": "echo \"Error: no test specified\" && exit 0",
         "upgrade": "prun upgrade",
-        "clean": "prun clean"
+        "clean": "prun clean",
+        "remove-deleted-branches": "prun git-remove-deleted-branches"
     },
     "repository": {
         "type": "git",
@@ -58,7 +59,7 @@
         "babel-loader": "^8.0.4",
         "babel-plugin-closure-elimination": "^1.3.0",
         "babel-plugin-lodash": "^3.3.4",
-        "babel-plugin-preval": "^3.0.1",
+        "babel-plugin-macros": "^2.4.2",
         "babel-plugin-transform-react-class-to-function": "^1.2.0",
         "check-dependencies": "^1.1.0",
         "classnames": "^2.2.6",
@@ -79,6 +80,7 @@
         "pretty-quick": "^1.8.0",
         "prun": "^1.0.1",
         "raw-loader": "^0.5.1",
+        "raw.macro": "^0.2.0",
         "react": "^16.7.0-alpha.2",
         "react-dom": "^16.7.0-alpha.2",
         "react-hot-loader": "^4.5.1",
