--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
         "tslint-config-prettier": "^1.17.0",
         "tslint-react": "^3.6.0",
         "typescript": "^3.2.1",
+        "url-loader": "^1.1.2",
         "webpack": "^4.27.1",
         "webpack-cli": "^3.1.2",
         "webpack-dev-server": "^3.1.10",
