--- a/docs/assets-manifest.json
+++ b/docs/assets-manifest.json
@@ -1,19 +1,19 @@
 {
-    "vendors.js": "vendors.c9010bab1972df164f62.js",
-    "vendors~Button~Shadows.js": "vendors~Button~Shadows.cbb8ae0f58951a710b8d.js",
-    "Button.js": "Button.53e5d887e2de89c7b7da.js",
-    "IntroPage.js": "IntroPage.5bd552fcafc5bfdfa1eb.js",
-    "Shadows.js": "Shadows.dd05bc26c68e2421ea35.js",
-    "index.js": "index.52dadbdf7a5ca698b6f1.js",
-    "manifest.js": "index.b804c524457eb08c898c.js",
-    "Button.53e5d887e2de89c7b7da.js.gz": "Button.53e5d887e2de89c7b7da.js.gz",
-    "IntroPage.5bd552fcafc5bfdfa1eb.js.gz": "IntroPage.5bd552fcafc5bfdfa1eb.js.gz",
-    "Shadows.dd05bc26c68e2421ea35.js.gz": "Shadows.dd05bc26c68e2421ea35.js.gz",
-    "index.52dadbdf7a5ca698b6f1.js.gz": "index.52dadbdf7a5ca698b6f1.js.gz",
-    "index.b804c524457eb08c898c.js.gz": "index.b804c524457eb08c898c.js.gz",
-    "index.html": "index.html",
-    "open-sans-400.woff2": "open-sans-400.8a445b21d76f362afebf945d89501b0e.woff2",
-    "open-sans-700.woff2": "open-sans-700.816adecd71db3dcf7b13558f87bbedb0.woff2",
-    "vendors.c9010bab1972df164f62.js.gz": "vendors.c9010bab1972df164f62.js.gz",
-    "vendors~Button~Shadows.cbb8ae0f58951a710b8d.js.gz": "vendors~Button~Shadows.cbb8ae0f58951a710b8d.js.gz"
+    "vendors.js": "/vendors.c9010bab1972df164f62.js",
+    "vendors~Button~Shadows.js": "/vendors~Button~Shadows.cbb8ae0f58951a710b8d.js",
+    "Button.js": "/Button.cf617093fb181e9aab40.js",
+    "IntroPage.js": "/IntroPage.5bd552fcafc5bfdfa1eb.js",
+    "Shadows.js": "/Shadows.a03cf2643a6d87601295.js",
+    "index.js": "/index.0ee1c48dc6427a56acf6.js",
+    "manifest.js": "/index.ab8adf1f42eeeccaf840.js",
+    "Button.cf617093fb181e9aab40.js.gz": "/Button.cf617093fb181e9aab40.js.gz",
+    "IntroPage.5bd552fcafc5bfdfa1eb.js.gz": "/IntroPage.5bd552fcafc5bfdfa1eb.js.gz",
+    "Shadows.a03cf2643a6d87601295.js.gz": "/Shadows.a03cf2643a6d87601295.js.gz",
+    "index.0ee1c48dc6427a56acf6.js.gz": "/index.0ee1c48dc6427a56acf6.js.gz",
+    "index.ab8adf1f42eeeccaf840.js.gz": "/index.ab8adf1f42eeeccaf840.js.gz",
+    "index.html": "/index.html",
+    "open-sans-400.woff2": "/open-sans-400.8a445b21d76f362afebf945d89501b0e.woff2",
+    "open-sans-700.woff2": "/open-sans-700.816adecd71db3dcf7b13558f87bbedb0.woff2",
+    "vendors.c9010bab1972df164f62.js.gz": "/vendors.c9010bab1972df164f62.js.gz",
+    "vendors~Button~Shadows.cbb8ae0f58951a710b8d.js.gz": "/vendors~Button~Shadows.cbb8ae0f58951a710b8d.js.gz"
 }
